--- a/4-application/app/src/main/res/layout/fragment_book_info.xml
+++ b/4-application/app/src/main/res/layout/fragment_book_info.xml
@@ -100,7 +100,7 @@
         android:id="@+id/book_info_status_spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="70dp"
         android:entries="@array/bookinfospinneroptions"
         app:layout_constraintEnd_toEndOf="parent"
@@ -201,17 +201,16 @@
         app:layout_constraintTop_toBottomOf="@+id/book_info_quote_edit_text" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/book_info_amazon"
         android:layout_width="27dp"
         android:layout_height="36dp"
         android:layout_marginStart="2dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="20dp"
         android:src="@drawable/amazon"
-        app:layout_constraintBottom_toTopOf="@+id/date_completed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/book_info_status_spinner"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/amazon"/>
+        app:layout_constraintTop_toBottomOf="@+id/book_info_authors"
+        tools:srcCompat="@drawable/amazon" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
