--- a/4-application/app/src/main/res/layout/fragment_read.xml
+++ b/4-application/app/src/main/res/layout/fragment_read.xml
@@ -8,14 +8,51 @@
     tools:context=".MainActivity">
 
 
+    <ImageView
+        android:id="@+id/reading_sort_switch"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/sort"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/sort_spinner"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/sort" />
+
     <ListView
         android:id="@+id/custom_list_reading"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/list_item"/>
+        app:layout_constraintTop_toBottomOf="@+id/sort_spinner"
+        tools:listitem="@layout/list_item" />
+
+    <TextView
+        android:id="@+id/reading_sort_by"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/sort_by_text"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/sort_spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/sort_spinner"
+        android:layout_width="190dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:entries="@array/listsortspinneroptions"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
