--- a/4-application/app/src/main/res/layout/fragment_home.xml
+++ b/4-application/app/src/main/res/layout/fragment_home.xml
@@ -24,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Scan barcode"
+        android:text="Scan Barcode"
+        android:drawableLeft="@drawable/ic_baseline_camera_alt_24"
         app:layout_constraintBottom_toTopOf="@+id/searchResults"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
